# mcfp-optimizer

./: .gitignore  Cargo.toml  Makefile  README.md  graph.dot  simulated_annealing.csv
docs/: neighborhood.drawio
eval/: andomized_hillclimb_edges.csv  costs.ipynb  dfs_budget.ipynb  dfs_budgets.csv  edges.csv  groups.csv  print_path.py  randomized_best.csv  randomized_best_edges.csv  randomized_best_groups.csv  randomized_best_runtime.csv  randomized_best_test.csv  randomized_best_test_runtime.csv  randomized_hillclimb.csv  randomized_hillclimb_edges.csv  randomized_hillclimb_groups.csv  randomized_hillclimb_runtime.csv  randomized_hillclimb_test.csv  randomized_hillclimb_test_runtime.csv  requirements.txt  simulated_annealing.csv  simulated_annealing.ipynb  simulated_annealing_100_runs.csv  simulated_annealing_best.csv  simulated_annealing_cost.csv  simulated_annealing_edges.csv  simulated_annealing_groups.csv  simulated_annealing_on_path.csv  simulated_annealing_on_path_100_runs.csv  simulated_annealing_on_path_edges.csv  simulated_annealing_on_path_groups.csv  simulated_annealing_on_path_runtime.csv  simulated_annealing_on_path_test.csv  simulated_annealing_on_path_test_runtime.csv  simulated_annealing_on_path_travel_cost.csv  simulated_annealing_on_path_travel_delay.csv  simulated_annealing_runtime.csv  simulated_annealing_test.csv  simulated_annealing_test_runtime.csv  start_100_runs.sh
graphs/: graph.dot  group_10_selected_path.dot  subgraph_complete.dot  subgraph_group_1.dot  subgraph_group_10.dot  subgraph_group_2.dot  subgraph_group_3.dot  subgraph_group_6.dot
graphs/groups/: 1.dot  2.dot  group_1.dot  (+44 more)
sample_data/: footpaths.csv  graph.dot  groups.csv  stations.csv  trips.csv
src/: csv_reader.rs  main.rs  model.rs  optimization.rs  path.rs
(+39 files in other folders)
