[package]
name = "praktikum-algorithmik"
version = "0.1.0"
authors = ["Elias Wendt <elias.wendt@stud.tu-darmstadt.de>", "Dorian-Benedikt Arnouts <dorian-benedikt.arnouts@stud.tu-darmstadt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.5", features = ["serde-1"] }
csv = "1.1"
indexmap = { version = "1.6.1", features = ["serde-1"] }
colored = "2.0.0"
rand = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
bincode = "1.3.2"