[package]
name = "praktikum-algorithmik"
description = "Multi-Commodity Flow Problem optimizer for passenger flow distribution in the railroad networks"
version = "1.0.0"
authors = ["Dorian-Benedikt Arnouts <dorian-benedikt.arnouts@stud.tu-darmstadt.de>", "Elias Wendt <elias.wendt@stud.tu-darmstadt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.5", features = ["serde-1"] }
csv = "1.1"
indexmap = { version = "1.6", features = ["serde-1"] }
colored = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
clap = "2.33.3"
crossbeam-utils = "0.8"